<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MordeShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_camisetas" tools:ignore="ExtraTranslation">Camisetas</string>
    <string name="menu_pantalones">Pantalones</string>
    <string name="menu_accesorio">Accesorio</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_caja">Caja</string>
    <string name="menu_inicio" tools:ignore="ExtraTranslation">Inicio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
