<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"

            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_camisetas"
            android:icon="@drawable/ic_nav_camisetas"
            android:title="@string/menu_camisetas" />
        <item
            android:id="@+id/nav_pantalones"
            android:icon="@drawable/ic_nav_pantalones"
            android:title="@string/menu_pantalones" />
        <item
            android:id="@+id/nav_accesorio"
            android:icon="@drawable/ic_nav_accesorio"
            android:title="@string/menu_accesorio" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_cuenta"
                android:icon="@drawable/ic_nav_cuenta"
                android:title="@string/menu_cuenta" />
            <item
                android:id="@+id/nav_caja"
                android:icon="@drawable/ic_nav_caja"
                android:title="@string/menu_caja" />
        </menu>
    </item>

</menu>
